--- a/views/bookmarks/index.erb
+++ b/views/bookmarks/index.erb
@@ -1,5 +1,11 @@
+<h1> Bookmark Manager</h1>
+
 <ul>
   <% @bookmarks.each do |bookmark| %>
-    <li><%= bookmark %></li>
+    <li>
+      <a href="<%= bookmark.url %>">
+        <%= bookmark.title %>
+      </a>
+    </li>
   <% end %>
 </ul>
